# scenic_renderer_native

./: CMakeLists.txt  README.md
examples/glfw_standalone/: CMakeLists.txt  main.c
include/: scenic_protocol.h  scenic_renderer.h  scenic_transport.h
src/: comms.c  comms.h  font.c  font.h  image.c  image.h  protocol.c  protocol.h  scenic_renderer.c  scenic_renderer_internal.h  script.c  script.h  types.h  utils.c  utils.h
src/platform/: platform.h
src/platform/android/: CMakeLists.txt  platform_android.c
src/platform/glfw/: platform_glfw.c
src/platform/ios/: platform_ios.h  platform_ios.mm
src/transport/: tcp.c  transport.c  unix_socket.c
test/: CMakeLists.txt  test_protocol.c
